# cgminer-rs

./: .gitignore  CONFIG_README.md  CONTRIBUTING.md  CORE_ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile  PROJECT_STATUS.md  README  README.md  README_SOCKS5.md  SIMPLE_DEMO.md  SOCKS5_TLS_WORKAROUND.md  build.rs  cgminer-asic-core.toml  cgminer-asic.toml  cgminer-software.toml  cgminer-virtual.toml  cgminer.toml  config-mac.toml  config.toml  config_priority_test.toml  docker-compose.yml  run_demo.sh  test_config.toml  test_mixed_compilation.sh  test_simple.toml  verify_fixes.rs
.cargo/: config.toml
benches/: btc_software_core_benchmark.rs  gpu_btc_core_benchmark.rs  maijie_l7_core_benchmark.rs  mining_benchmark.rs  software_core_benchmark.rs  stats_reporting_benchmark.rs  virtual_device_benchmark.rs
cgminer-a-maijie-l7-core/: Cargo.toml
cgminer-a-maijie-l7-core/src/: core.rs  device.rs  factory.rs  hardware.rs  lib.rs  maijie_l7.rs
cgminer-asic-core/: Cargo.toml
cgminer-asic-core/src/: core.rs  lib.rs
cgminer-core/: Cargo.toml
cgminer-core/src/: core.rs  device.rs  error.rs  lib.rs  registry.rs  types.rs  work.rs
cgminer-s-btc-core/: Cargo.toml
cgminer-s-btc-core/src/: core.rs  cpu_affinity.rs  device.rs  factory.rs  lib.rs  performance.rs  platform_optimization.rs
cgminer-s-btc-core/tests/: hashrate_calculation_test.rs  integration_tests.rs
cgminer-software-core/: Cargo.toml
cgminer-software-core/src/: core.rs  cpu_affinity.rs  device.rs  factory.rs  lib.rs
cgminer-software-core/tests/: integration_tests.rs
configs/: high-performance-50ghs.toml  performance-optimized.toml  working-config.toml
docs/: API.md  ARCHITECTURE_BOUNDARIES.md  ASICBOOST_CPU_ANALYSIS.md  CGMINER_LOGGING_STYLE.md  CONFIGURATION.md  CORE_ARCHITECTURE.md  README.md  SIMPLE_MONITORING.md  SOCKS5_PROXY.md  SOCKS5_TLS_IMPROVEMENTS.md  STATS_REPORTING_ANALYSIS.md  UNIVERSAL_CORE_USAGE.md  api-reference.md  architecture-boundaries-completion-report.md  architecture-diagrams.md  architecture.md  config-usage-analysis.md  core-development-guide.md  deployment.md  enhanced_mining_logs.md  f2pool-virtual-miner.md  hashmeter-integration.md  monitoring-comparison.md  project-structure.md  software-core-cpu-optimization.md  stratum-testing.md
examples/: advanced_config.toml  basic_config.toml  builtin_hashrate_display.rs  cgminer_style_output_demo.rs  cli-socks5-usage.md  cpu_affinity_demo.rs  debug_pool_communication.rs  enhanced_mining_logs.rs  f2pool_virtual_miner.rs  high_performance_demo.rs  integrated_hashmeter.rs  multi_device_demo.rs  multi_pool_management.rs  performance_benchmark.rs  performance_monitoring_demo.rs  run_virtual_miner.rs  simple_mining_logs.rs  simple_monitoring_usage.rs  simple_security_usage.rs  socks5-proxy-config.toml  socks5-tls-config.toml  stability_test.rs  stats_performance_test.rs  temperature_demo.rs  test_beautiful_logs.rs  test_cpu_affinity.rs  test_device_scaling.rs  test_f2pool_connection.rs  test_software_core.rs  test_software_core_config.rs  test_software_mining.rs  virtual_miner.rs
examples/configs/: README.md  f2pool_config.toml  f2pool_simple.toml  software_core_32_devices.toml  software_core_balanced.toml  software_core_dev.toml  software_core_example.toml  software_core_limited_cpu.toml  software_core_max_cpu.toml  software_core_max_cpu_fixed.toml  software_core_offline.toml  software_core_performance.toml
examples/scripts/: monitor.py  start_mining.sh
scripts/: build-optimized.sh  check-architecture-boundaries.sh  configure_software_core.sh  fix-interface-compatibility.sh  measure-success-metrics.sh  monitor_performance.sh  run_f2pool.sh  run_high_performance.sh  run_virtual.sh  test-build.sh  test-cli-proxy.sh  test-proxy-url.sh  test_stratum.sh  verify-interfaces.sh  verify_build.sh
src/: config.rs  core_loader.rs  error.rs  ffi.rs  lib.rs  main.rs
src/api/: auth.rs  handlers.rs  mod.rs  server.rs  websocket.rs
src/config/: tests.rs
src/device/: architecture.rs  chain.rs  conversion.rs  device_core_mapper.rs  factory.rs  maijie_l7.rs  manager.rs  mod.rs  software_driver.rs  tests.rs  traits.rs  virtual_device.rs
src/logging/: formatter.rs  hashmeter.rs  mining_logger.rs  mod.rs
src/mining/: hashmeter.rs  manager.rs  mod.rs  work_queue.rs
src/monitoring/: alerts.rs  metrics.rs  mod.rs  simple_web.rs  system.rs
src/performance/: cpu.rs  memory.rs  mod.rs  network.rs  profiler.rs
src/pool/: connection.rs  manager.rs  mod.rs  proxy.rs  scheduler.rs  stratum.rs  switcher.rs
src/security/: audit.rs  auth.rs  config.rs  crypto.rs  mod.rs  simple.rs
src/utils/: hashrate_formatter.rs  mod.rs
src/validation/: mod.rs
src/web/: handlers.rs  mod.rs  server.rs  templates.rs
tests/: btc_software_core_tests.rs  core_capability_tests.rs  core_integration_test.rs  integration_tests.rs  maijie_l7_core_tests.rs  renamed_cores_integration_test.rs  software_core_tests.rs  system_integration_test.rs
web/: dashboard.html  script.js  style.css
