[workspace]
members = [
    "cgminer-core",
    "cgminer-software-core",
    "cgminer-asic-core"
]

[package]
name = "cgminer-rs"
version = "0.1.0"
edition = "2021"
authors = ["CGMiner Rust Team"]
description = "High-performance ASIC Bitcoin miner written in Rust"
license = "GPL-3.0"
repository = "https://github.com/your-org/cgminer-rs"
keywords = ["bitcoin", "mining", "asic", "cryptocurrency"]
categories = ["hardware-support", "network-programming"]

[dependencies]
# Core libraries
cgminer-core = { path = "cgminer-core" }
cgminer-software-core = { path = "cgminer-software-core", optional = true }
cgminer-asic-core = { path = "cgminer-asic-core", optional = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Networking
reqwest = { version = "0.11", features = ["json"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
async-trait = "0.1"
fastrand = "2.0"
ctrlc = "3.4"

# Hardware interface
libc = "0.2"
nix = "0.27"

# Metrics and monitoring
prometheus = { version = "0.13", optional = true }

# Web server for API
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
futures-util = "0.3"

# Dynamic library loading
libloading = "0.8"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
glob = "0.3"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
reqwest = { version = "0.11", features = ["json"] }

[[bench]]
name = "mining_benchmark"
harness = false

[[bench]]
name = "virtual_device_benchmark"
harness = false

[[bin]]
name = "cgminer-rs"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0

[features]
default = ["software-core", "asic-core"]
software-core = ["cgminer-software-core"]
asic-core = ["cgminer-asic-core"]
maijie-l7 = ["asic-core"]
web-ui = []
metrics = ["prometheus"]
