# 移除 workspace 配置，因为内核模块现在在外部目录

[package]
name = "cgminer-rs"
version = "0.1.0"
edition = "2021"
authors = ["CGMiner Rust Team"]
description = "High-performance ASIC Bitcoin miner written in Rust"
license = "GPL-3.0"
repository = "https://github.com/your-org/cgminer-rs"
keywords = ["bitcoin", "mining", "asic", "cryptocurrency"]
categories = ["hardware-support", "network-programming"]

[dependencies]
# Core libraries - 指向外部目录
cgminer-core = { path = "../cgminer-core" }
cgminer-cpu-btc-core = { path = "../cgminer-cpu-btc-core", optional = true }
cgminer-gpu-btc-core = { path = "../cgminer-gpu-btc-core", optional = true }
cgminer-asic-maijie-l7-core = { path = "../cgminer-asic-maijie-l7-core", optional = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Networking
reqwest = { version = "0.11", features = ["json"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
async-trait = "0.1"
fastrand = "2.0"
ctrlc = "3.4"

# Hardware interface
libc = "0.2"
nix = "0.27"

# Metrics and monitoring (Prometheus removed - using simple built-in monitoring)

# Web server for API
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
futures-util = "0.3"

# Security (simplified - only essential encryption)
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# Dynamic library loading
libloading = { version = "0.8", optional = true }
num_cpus = "1.17.0"

# System monitoring
sysinfo = "0.30"

# Web server for Prometheus metrics
warp = "0.3"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
glob = "0.3"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
reqwest = { version = "0.11", features = ["json"] }

[[bench]]
name = "mining_benchmark"
harness = false

[[bench]]
name = "virtual_device_benchmark"
harness = false

[[bin]]
name = "cgminer-rs"
path = "src/main.rs"

[[bin]]
name = "test-stratum-connection"
path = "src/bin/test_stratum_connection.rs"

# 发布版本优化配置
[profile.release]
# 链接时优化 - 提高性能
lto = "fat"
# 单个代码生成单元 - 最大化优化
codegen-units = 1
# 崩溃时直接终止 - 减少二进制大小
panic = "abort"
# 最高优化级别
opt-level = 3
# 启用调试信息用于性能分析
debug = 1
# 去除未使用的代码
strip = "symbols"
# 溢出检查（挖矿程序需要数值稳定性）
overflow-checks = false

# 开发版本配置
[profile.dev]
debug = true
opt-level = 1
# 开发时保留溢出检查
overflow-checks = true
# 增量编译加速开发
incremental = true

# 性能测试优化配置
[profile.bench]
inherits = "release"
debug = true
lto = "thin"

# 测试配置
[profile.test]
opt-level = 1
debug = true
overflow-checks = true

# 注意：平台特定的编译优化已移至 .cargo/config.toml
# 这里的 cfg() 语法在 Cargo.toml 中不被支持，需要使用具体的目标三元组

[features]
default = ["btc-gpu"]

# 核心特性
btc-software = ["cgminer-cpu-btc-core"]
btc-gpu = ["cgminer-gpu-btc-core"]
maijie-l7 = ["cgminer-asic-maijie-l7-core"]

# 组合特性
all-cores = ["btc-software", "btc-gpu", "maijie-l7"]
hardware-only = ["btc-gpu", "maijie-l7"]
software-only = ["btc-software"]
gpu-only = ["btc-gpu"]

# 其他特性
web-ui = []
dynamic-loading = ["libloading"]

[[bench]]
name = "btc_software_core_benchmark"
harness = false
required-features = ["btc-software"]

[[bench]]
name = "maijie_l7_core_benchmark"
harness = false
required-features = ["maijie-l7"]

[[bench]]
name = "gpu_btc_core_benchmark"
harness = false
required-features = ["btc-gpu"]
