# 移除 workspace 配置，因为内核模块现在在外部目录

[package]
name = "cgminer-rs"
version = "0.1.0"
edition = "2021"
authors = ["CGMiner Rust Team"]
description = "High-performance ASIC Bitcoin miner written in Rust"
license = "GPL-3.0"
repository = "https://github.com/your-org/cgminer-rs"
keywords = ["bitcoin", "mining", "asic", "cryptocurrency"]
categories = ["hardware-support", "network-programming"]

[dependencies]
# Core libraries - 指向外部目录
cgminer-core = { path = "../cgminer-core" }
cgminer-cpu-btc-core = { path = "../cgminer-cpu-btc-core", optional = true }
cgminer-gpu-btc-core = { path = "../cgminer-gpu-btc-core", optional = true }
cgminer-asic-maijie-l7-core = { path = "../cgminer-asic-maijie-l7-core", optional = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Networking
reqwest = { version = "0.11", features = ["json"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"
tokio-socks = "0.5"
tokio-native-tls = "0.3"
native-tls = "0.2"
url = "2.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
async-trait = "0.1"
fastrand = "2.0"
ctrlc = "3.4"

# Hardware interface
libc = "0.2"
nix = "0.27"

# Metrics and monitoring (Prometheus removed - using simple built-in monitoring)

# Web server for API
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
futures-util = "0.3"

# Security (simplified - only essential encryption)
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# 移除动态库加载依赖，改为静态编译
# libloading = { version = "0.8", optional = true }
num_cpus = "1.17.0"

# System monitoring
sysinfo = "0.30"

# Web server for Prometheus metrics
warp = "0.3"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
glob = "0.3"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "cgminer-rs"
path = "src/main.rs"

# 主程序基础配置 - 编译器优化已移至外置核心
[profile.release]
# 基础优化配置
opt-level = 2
debug = false
strip = "symbols"
panic = "unwind"

# 开发版本配置
[profile.dev]
debug = true
opt-level = 0
incremental = true

# 性能测试配置
[profile.bench]
inherits = "release"
debug = true

# 测试配置
[profile.test]
opt-level = 0
debug = true

# 注意：编译器优化和平台优化已移至外置核心
# 主程序保持基础配置，由各个核心自行处理优化

[features]
default = ["cpu-btc"]

# 核心特性
cpu-btc = ["cgminer-cpu-btc-core"]
gpu-btc = ["cgminer-gpu-btc-core"]
maijie-l7 = ["cgminer-asic-maijie-l7-core"]

# 组合特性
all-cores = ["cpu-btc", "gpu-btc", "maijie-l7"]
hardware-only = ["gpu-btc", "maijie-l7"]
gpu-only = ["gpu-btc"]
software-only = ["cpu-btc"]
# gpu-only = ["btc-gpu"]  # 暂时禁用

# 其他特性
web-ui = []
# 移除动态加载特性，改为静态编译
# dynamic-loading = ["libloading"]

# [[bench]]
# name = "gpu_btc_core_benchmark"
# harness = false
# required-features = ["gpu-btc"]
