[package]
name = "cgminer-asic-core"
version = "0.1.0"
edition = "2021"
authors = ["CGMiner Rust Team"]
description = "ASIC mining core for CGMiner-RS - provides hardware ASIC mining device support"
license = "GPL-3.0"
repository = "https://github.com/your-org/cgminer-rs"
keywords = ["bitcoin", "mining", "asic", "hardware"]
categories = ["hardware-support", "embedded"]

[dependencies]
# Core library
cgminer-core = { path = "../cgminer-core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
async-trait = "0.1"
fastrand = "2.0"

# Hardware interface
libc = "0.2"
nix = "0.27"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[features]
default = ["maijie-l7"]
maijie-l7 = []
mock-hardware = []

[lib]
name = "cgminer_asic_core"
crate-type = ["cdylib", "rlib"]
