[package]
name = "cgminer-s-btc-core"
version = "0.1.0"
edition = "2021"
authors = ["CGMiner Rust Team"]
description = "Software Bitcoin mining core for CGMiner-RS - provides CPU-based Bitcoin mining using real SHA256 algorithms"
license = "GPL-3.0"
repository = "https://github.com/your-org/cgminer-rs"
keywords = ["bitcoin", "mining", "software", "cpu", "sha256"]
categories = ["hardware-support", "algorithms"]

[dependencies]
# Core library
cgminer-core = { path = "../cgminer-core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
async-trait = "0.1"
fastrand = "2.0"

# CPU affinity and system info
core_affinity = "0.8"
num_cpus = "1.16"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[lib]
name = "cgminer_s_btc_core"
crate-type = ["rlib"]  # 只生成rlib，避免LTO冲突

# 如果需要动态库，可以单独构建
# crate-type = ["cdylib", "rlib"]
